@@ -11,7 +11,6 @@ See http://www.MMBase.org/license
 package org.mmbase.module.builders;
 
 import java.util.*;
-import java.util.concurrent.*;
 
 import org.mmbase.module.core.*;
 import org.mmbase.util.functions.*;
@@ -30,7 +29,7 @@ import org.mmbase.storage.search.*;
  * nodes caches in sync but also makes it possible to split tasks between machines. You could for example have a server that encodes video.
  *  when a change to a certain node is made one of the servers (if wel configured) can start encoding the videos.
  * @author  vpro
- * @version $Id: MMServers.java,v 1.50 2007-06-21 15:50:23 nklasens Exp $
+ * @version $Id: MMServers.java,v 1.44.2.2 2007-01-03 09:16:28 nklasens Exp $
  */
 public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnable, org.mmbase.datatypes.resources.StateConstants {
 
@@ -39,21 +38,21 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
     private long intervalTime = 60 * 1000; // 1 minute
 
     private boolean checkedSystem = false;
-    private final String javastr;
-    private final String osstr;
-    private final List<String> possibleServices = new CopyOnWriteArrayList<String>();
+    private String javastr;
+    private String osstr;
+    private Vector possibleServices = new Vector();
 
     /**
      * Function uptime
      * @since MMBase-1.8
      */
-    protected Function<Long> getUpTime = new AbstractFunction<Long>("uptime", Parameter.emptyArray(), ReturnType.LONG) {
+    protected Function getUpTime = new AbstractFunction("uptime", Parameter.EMPTY, ReturnType.LONG) {
             {
                 setDescription("The function 'uptime' returns the uptime of the current server.");
             }
-            public Long getFunctionValue(Parameters parameters) {
+            public Object getFunctionValue(Parameters parameters) {
                 int now = (int) (System.currentTimeMillis() / 1000);
-                return Long.valueOf(now - MMBase.startTime);
+                return new Long(now - MMBase.startTime);
             }
         };
     {
@@ -82,7 +81,7 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
         }
          tmp = getInitParameter("ServiceTimeout");
         if (tmp != null) {
-            serviceTimeout = Integer.parseInt(tmp);
+            serviceTimeout = (int)Integer.parseInt(tmp);
             log.service("ServiceTimeout was configured to be " + serviceTimeout + " seconds");
         } else {
             log.service("ServiceTimeout defaults to " + serviceTimeout + " seconds");
@@ -96,7 +95,7 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
      * @since MMBase-1.7
      */
     protected void start() {
-        MMBaseContext.startThread(this, "MMServers");
+        MMBaseContext.startThread(this,"MMServers");
     }
 
     /**
@@ -174,9 +173,10 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
             String machineName = mmb.getMachineName();
             String host = mmb.getHost();
             log.debug("doCheckUp(): machine=" + machineName);
-            for (MMObjectNode node : getNodes()) {
+            for (Iterator iter = getNodes().iterator(); iter.hasNext();) {
+                MMObjectNode node = (MMObjectNode) iter.next();
                 String name = node.getStringValue("name");
-                String h   = node.getStringValue("host");
+                String h    = node.getStringValue("host");
                 log.debug("Checking " + name + "@" + h);
                 if (name.equals(machineName) && h.equals(host)) {
                     imoke = checkMySelf(node);
@@ -184,9 +184,8 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
                     checkOther(node);
                 }
             }
-            if (! imoke) {
-                log.info("No mmservers found for machineName " + machineName + " host " + host + " creating one now");
-                createMySelf(machineName, host);
+            if (!imoke) {
+                createMySelf(machineName);
             }
         } catch (Exception e) {
             log.error("Something went wrong in MMServers Checkup Thread " + e.getMessage(), e);
@@ -197,16 +196,16 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
      * Returns all the nodes from the builder.
      * @return The nodes.
      */
-    public List<MMObjectNode> getNodes() {
+    public List getNodes() {
         try {
-            List<MMObjectNode> nodes = storageConnector.getNodes(new NodeSearchQuery(this), false);
+            List nodes = storageConnector.getNodes(new NodeSearchQuery(this), false);
             if (nodes != null) {
                 return nodes;
             }
         } catch (SearchQueryException e) {
             log.error(e);
         }
-        return new ArrayList<MMObjectNode>();
+        return new ArrayList();
     }
     
     /**
@@ -252,14 +251,13 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
     /**
      * @javadoc
      */
-    private void createMySelf(String machineName, String host) {
-        
+    private void createMySelf(String machineName) {
         MMObjectNode node = getNewNode("system");
         node.setValue("name", machineName);
         node.setValue("state", ACTIVE);
         node.setValue("atime", (int) (System.currentTimeMillis() / 1000));
         node.setValue("os", osstr);
-        node.setValue("host", host);
+        node.setValue("host", mmb.getHost());
         node.setValue("jdk", javastr);
         insert("system", node);
     }
@@ -268,11 +266,13 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
      * @javadoc
      */
     private void setServicesDown(MMObjectNode node) {
+        Enumeration f = possibleServices.elements();
         log.debug("setServicesDown() for " + node);
-        for (String type : possibleServices) {
-            Enumeration<MMObjectNode> e = mmb.getInsRel().getRelated(node.getIntValue("number"), type);
+        while (f.hasMoreElements()) {
+            String type = (String)f.nextElement();
+            Enumeration e = mmb.getInsRel().getRelated(node.getIntValue("number"), type);
             while (e.hasMoreElements()) {
-                MMObjectNode node2 = e.nextElement();
+                MMObjectNode node2 = (MMObjectNode)e.nextElement();
                 MMObjectBuilder parent = node2.getBuilder();
                 log.info("setServicesDown(): downnode(" + node2 + ") REMOVING node");
                 parent.removeRelations(node2);
@@ -292,7 +292,7 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
      */
     public void setCheckService(String name) {
         if (!possibleServices.contains(name)) {
-            possibleServices.add(name);
+            possibleServices.addElement(name);
         }
     }
 
@@ -326,9 +326,9 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
         }
         query.setConstraint(constraint);
         try {
-            List<MMObjectNode> nodeList = getNodes(query);
+            List nodeList = getNodes(query);
             if (nodeList.size() > 0) {
-                return nodeList.get(0);
+                return (MMObjectNode) nodeList.get(0);
             } else {
                 log.info("Can't find any mmserver node with name=" + name);
                 return null;
@@ -361,11 +361,10 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
 
 
     protected NodeSearchQuery query = null;
-
     /**
      * @return List of MMObjectNodes representing  active servers, which are not this server.
      */
-    public List<MMObjectNode> getActiveServers() {
+    public List getActiveServers() {
         String machineName = mmb.getMachineName();
         String host        = mmb.getHost();
         if (log.isDebugEnabled()) {
@@ -379,7 +378,7 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
             constraint1.addChild(constraint1a);
             constraint1.addChild(constraint1b);
             constraint1.setInverse(true);
-            BasicFieldValueConstraint constraint2 = new BasicFieldValueConstraint(query.getField(getField("state")), ACTIVE);
+            BasicFieldValueConstraint constraint2 = new BasicFieldValueConstraint(query.getField(getField("state")), new Integer(ACTIVE));
             BasicCompositeConstraint constraint = new BasicCompositeConstraint(CompositeConstraint.LOGICAL_AND);
             constraint.addChild(constraint1);
             constraint.addChild(constraint2);
@@ -393,7 +392,7 @@ public class MMServers extends MMObjectBuilder implements MMBaseObserver, Runnab
             return storageConnector.getNodes(query, false);
         } catch (org.mmbase.storage.search.SearchQueryException sqe) {
             log.error(sqe);
-            return new ArrayList<MMObjectNode>();
+            return new ArrayList();
         }
     }
 }
